home.css
.nav{
    font-family: 'Raleway', sans-serif;
    font-weight: 0px;
    text-align: right;
    position: relative;
    top:0px;
    /* line-height: 60px; */
}

.hr{
    position: relative;

    bottom: 70px;
    float: right;
    height: 75px;
    width:394px;
    margin-right: 80px;

}

.profilepic {
    background-image: url(images/profilepic3.png);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 950px;
    width: 67%;
    margin-top: -850px;
    margin-bottom: -200px;
    margin-left: -9px;

}

.introTitle {
	font-family: 'Raleway', sans-serif;
	position: relative;
	top: 0px;
    font-weight: 700;
    font-size: 50pt;
    text-transform: uppercase;
    text-align: center;
    left:980px;
    width:400px;
    animation: animation 3s 1;

}
@keyframes animation{
   0%{
    color: #F4F4F4;
    top: 60px;
  }
}
.introPara {
    width:420px;
    word-wrap: break-word;
    margin: 80px 50px;
    position: relative;
    text-align: left;
    top:20px;
    left: 930px;
    font-family: 'Raleway', sans-serif;
}
.introImages {
	position: relative;

	bottom: 0px;
	float: right;
    height: 50px;
    margin-right: 10px;
}
#relevantLinks{
	font-family: 'Raleway', sans-serif;
	position: relative;
	bottom: -30px;
	text-align: right;
	font-size: 30pt;

}

